# production-level-project-structure

./: LICENSE  pyproject.toml
name_of_project/exception/: custom_exception.py
name_of_project/logger/: cloud_logger.py  dev_logger.py
name_of_project/utils/: config_loader.py
